--- a/index.html
+++ b/index.html
@@ -460,11 +460,19 @@
                         Address (BSC)</h2>
                       <a target="_blank" href="https://www.bscscan.com/token/0xaf656ec1cd3c802863263a00097fb7370f5e8653"
 
-                        rel="noopener noreferrer" class="text-veryLightGrey underline break-all mb-4 font-medium">0xd632Bd021a07AF70592CE1E18717Ab9aA126DECB</a>
-                      <div><a href="0xaf656ec1cd3c802863263a00097fb7370f5e8653"><button
+                        rel="noopener noreferrer" class="text-veryLightGrey underline break-all mb-4 font-medium"><p id="0xd632Bd021a07AF70592CE1E18717Ab9aA126DECB">0xd632Bd021a07AF70592CE1E18717Ab9aA126DECB</a>
+					  <div>
+<button  class="contract-copy-btn font-medium rounded-sm bg-white" onclick="copyEvent('copy')">Copy</button>
 
-                            class="contract-copy-btn font-medium rounded-sm bg-white">Copy</button></a></div>
-                    </div>
+<script>
+    function copyEvent(id)
+    {
+        var str = document.getElementById(id);
+        window.getSelection().selectAllChildren(str);
+        document.execCommand("Copy")
+    }
+</script>
+</div>
                   </div>
                 </div>
               </div>
