--- a/ch.html
+++ b/ch.html
@@ -486,7 +486,7 @@
                   src="images/gov-and-dao.png" alt="Governance and DAO image"></div>
               <div class="flex-1 sm:w-8/12 sm:mt-40">
                 <div class="flex flex-col lg:flex-row lg:items-center lg:text-left">
-                  <h1 class="mt-8 sm:mt-0 section-title">Governance &amp; DAO</h1>
+                  <h1 class="mt-8 sm:mt-0 section-title">Governance</h1>
                   <a target="_blank" href="https://google.com" rel="noopener noreferrer"
 
                     class="lg:ml-auto"><button class="flex text-base font-medium mt-1 lg:text-lg lg:mt-0 xl:text-xl">See
