--- a/ch.html
+++ b/ch.html
@@ -615,7 +615,7 @@
 
                     rel="noopener noreferrer" class="text-body">Whitepaper</a><a
 
-                    target="_blank" href="https://www.bscscan.com/address/0xaf656ec1cd3c802863263a00097fb7370f5e8653"
+                    target="_blank" href="https://www.bscscan.com/address/"
 
                     rel="noopener noreferrer" class="text-body">Contract on
                     Bscscan</a></div>
@@ -635,7 +635,7 @@
                 cryptocurrency market and make your decision by considering your
                 financial situation and limitations.<a class="w-28 mt-24 mx-auto"
 
-                  target="_blank" rel="noopener noreferrer" href="https://drive.google.com/drive/folders/1fvWrw0-Bfttx7yBjxFvn-XB624QogY-X"></a></p>
+                  target="_blank" rel="noopener noreferrer" href=""></a></p>
             </div>
             <div class="full-width-bg bg-black top-0 absolute h-full"></div>
           </div>
