--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 src="images/logo.png" alt="Lucky Logo"><img class="w-32 sm:w-full"
 
                 src="images/logotype.png" alt="Lucky Logotype"></div>
-            <div class="flex ml-auto justify-center justify-items-center items-center"><button
+           <div class="flex ml-auto justify-center justify-items-center items-center"><button
 
                 class="text-black text-xl underline font-medium">EN</button><a href="./index.html"></a><a href="./ch.html"><button
 
@@ -458,7 +458,7 @@
                     <div class="flex flex-col">
                       <h2 class="text-white mb-2 text-2xl font-medium">Contract
                         Address (BSC)</h2>
-                      <a target="_blank" href="https://www.bscscan.com/token/0xaf656ec1cd3c802863263a00097fb7370f5e8653"
+                                            <a target="_blank" href="https://www.bscscan.com/token/0xaf656ec1cd3c802863263a00097fb7370f5e8653"
 
                         rel="noopener noreferrer" class="text-veryLightGrey underline break-all mb-4 font-medium"><p id="copy">0xd632Bd021a07AF70592CE1E18717Ab9aA126DECB</a>
 					  <div>
@@ -473,6 +473,7 @@
     }
 </script>
 </div>
+                    </div>
                   </div>
                 </div>
               </div>
@@ -485,7 +486,7 @@
                   src="images/gov-and-dao.png" alt="Governance and DAO image"></div>
               <div class="flex-1 sm:w-8/12 sm:mt-40">
                 <div class="flex flex-col lg:flex-row lg:items-center lg:text-left">
-                  <h1 class="mt-8 sm:mt-0 section-title">Governance &amp; DAO</h1>
+                  <h1 class="mt-8 sm:mt-0 section-title">Governance</h1>
                   <a target="_blank" href="https://google.com" rel="noopener noreferrer"
 
                     class="lg:ml-auto"><button class="flex text-base font-medium mt-1 lg:text-lg lg:mt-0 xl:text-xl">See
@@ -614,7 +615,7 @@
 
                     rel="noopener noreferrer" class="text-body">Whitepaper</a><a
 
-                    target="_blank" href="https://www.bscscan.com/address/0xaf656ec1cd3c802863263a00097fb7370f5e8653"
+                    target="_blank" href="https://www.bscscan.com/address/"
 
                     rel="noopener noreferrer" class="text-body">Contract on
                     Bscscan</a></div>
@@ -634,7 +635,7 @@
                 cryptocurrency market and make your decision by considering your
                 financial situation and limitations.<a class="w-28 mt-24 mx-auto"
 
-                  target="_blank" rel="noopener noreferrer" href="https://drive.google.com/drive/folders/1fvWrw0-Bfttx7yBjxFvn-XB624QogY-X"></a></p>
+                  target="_blank" rel="noopener noreferrer" href=""></a></p>
             </div>
             <div class="full-width-bg bg-black top-0 absolute h-full"></div>
           </div>
