--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <meta name="description" content="Lucky is a ultimate dApps ecosystem. Lucky Token is available on BSC.">
     <meta name="keywords" content="lucky, lucky token, token, cryptocurrency, crypto, doge, hoge, shiba, coin, husky, akita, chowchow, feg, poodl">
     <meta name="robots" content="index, follow">
-    <link rel="preload" href="fonts/HaasGrotDisp-55Roman.woff2" as="font" crossorigin="">
-    <link rel="preload" href="fonts/HaasGrotDisp-65Medium.woff2" as="font" crossorigin="">
-    <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
-    <link rel="manifest" href="favicon/site.webmanifest">
-    <link rel="mask-icon" href="favicon/ms-icon-144x144.png" color="#5bbad5">
+    <link rel="preload" href="/fonts/HaasGrotDisp-55Roman.woff2" as="font" crossorigin="">
+    <link rel="preload" href="/fonts/HaasGrotDisp-65Medium.woff2" as="font" crossorigin="">
+    <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
+    <link rel="manifest" href="/favicon/site.webmanifest">
+    <link rel="mask-icon" href="/favicon/ms-icon-144x144.png" color="#5bbad5">
     <meta name="apple-mobile-web-app-title" content="Lucky">
     <meta name="application-name" content="Lucky">
     <meta name="msapplication-TileColor" content="#da532c">
@@ -34,25 +34,25 @@
     <link rel="preload" href="static/css/3c8fc2759916ac28255c.css" as="style">
     <link rel="stylesheet" href="static/css/3c8fc2759916ac28255c.css" data-n-g="">
     <noscript data-n-css=""></noscript>
-    <link rel="preload" href="static/chunks/webpack-03f49e4826186a6b7fc1.js"
+    <link rel="preload" href="/static/chunks/webpack-03f49e4826186a6b7fc1.js"
 
       as="script">
-    <link rel="preload" href="static/chunks/framework-85df7ef61ca43882658a.js"
+    <link rel="preload" href="/static/chunks/framework-85df7ef61ca43882658a.js"
 
       as="script">
-    <link rel="preload" href="static/chunks/commons-0a8bd3b376f3bb056aae.js"
+    <link rel="preload" href="/static/chunks/commons-0a8bd3b376f3bb056aae.js"
 
       as="script">
-    <link rel="preload" href="static/chunks/main-0aa2c0cdbba9df47b284.js"
+    <link rel="preload" href="/static/chunks/main-0aa2c0cdbba9df47b284.js"
 
       as="script">
-    <link rel="preload" href="static/chunks/635-51ef473385aca1b4e79d.js" as="script">
-    <link rel="preload" href="static/chunks/pages/_app-78354b0af5c6328014f5.js"
+    <link rel="preload" href="/static/chunks/635-51ef473385aca1b4e79d.js" as="script">
+    <link rel="preload" href="/static/chunks/pages/_app-78354b0af5c6328014f5.js"
 
       as="script">
-    <link rel="preload" href="static/chunks/89-bde68ef87e9ebcb71d3b.js" as="script">
-    <link rel="preload" href="static/chunks/67-bd18117f0c58283f08ee.js" as="script">
-    <link rel="preload" href="static/chunks/pages/index-41a98304bdef04255c23.js"
+    <link rel="preload" href="/static/chunks/89-bde68ef87e9ebcb71d3b.js" as="script">
+    <link rel="preload" href="/static/chunks/67-bd18117f0c58283f08ee.js" as="script">
+    <link rel="preload" href="/static/chunks/pages/index-41a98304bdef04255c23.js"
 
       as="script">
   </head>
