--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
           </div>
           <div class="relative"><img class="relative mx-auto max-w-4xl top-8 sm:-top-10 lg:-top-20 hero-img-st-h"
 
-              src="images/Game_Mode_3D_3.png" alt="Lucky Logo">
+              src="images/Game_Mode_3D_3.png" alt="Lucky Logo" style="width: 100%;max-height: 100%" />
             <div class="text-body this-is-kangal-desc mt-4"><br>
             </div>
             <br>
