--- a/ch.html
+++ b/ch.html
@@ -73,8 +73,7 @@
                   class="text-black text-xl ml-4 ">EN</button></a></div>
           </div>
           <div class="max-w-lg mt-8 sm:mt-16">
-            <h1 class="text-4xl font-medium">a BSC building the ultimate Gamefi
-              ecosystem</h1>
+            <h1 class="text-4xl font-medium">BSC上构建的终极 Gamefi 生态系统</h1>
             <h3 class="text-2xl mt-6">The ecosystem will be powered by the
               Utility Token LUCKY that will be minted only through GAMING</h3>
             <div class="mt-4 sm:mt-9"><a target="_blank" href="google.com" rel="noopener noreferrer"><button
