--- a/ch.html
+++ b/ch.html
@@ -436,7 +436,7 @@
                       </a></div>
                     <div class="flex flex-col space-y-4 w-full sm:flex-row sm:space-x-4 sm:space-y-0"><a
 
-                        target="_blank" href="https://v2.info.uniswap.org/pair/0x0bc4428491010dfeaa97e48c70bf4940fa783b40"
+                        target="_blank" href="https://pancakeswap.finance/"
 
                         rel="noopener noreferrer" class="flex-1 py-2 pr-2 relative flex font-medium text-xl">Pancake
                         Swap pool<img class="w-5 ml-auto" src="images/href-grey.svg"
