--- a/ch.html
+++ b/ch.html
@@ -71,7 +71,7 @@
                 上构建的终极 Gamefi 生态系统</u></h1>
             <h1 class="text-4xl font-medium"></h1>
             <h3 class="text-2xl mt-6"><b>生态将由代币 LUCKY 支持，仅支持游戏铸造</b></h3>
-            <div class="mt-4 sm:mt-9"><a target="_blank" href="google.com" rel="noopener noreferrer"><button
+            <div class="mt-4 sm:mt-9"><a target="_blank" href="./ch.html" rel="noopener noreferrer"><button
 
                   class="btn-secondary"></button></a></div>
           </div>
@@ -250,15 +250,13 @@
 
                         style="color: black;">中期<br>
                       </span></h2>
-                    <div class="flex max-w-xs px-6 py-4 rounded bg-lightGrey"><a
+                    <div class="flex max-w-xs px-6 py-4 rounded bg-lightGrey"><button
 
-                        target="_blank" class="w-full" href="https://google.com"
-
-                        rel="noopener noreferrer"><button class="w-full underline">
-                          <div class="flex w-full">
-                            <p class="text-neroGrey mr-auto">中心化交易所 AMA</p>
-                            <img class="w-6 ml-6" src="images/pending.svg" alt="Status icon"></div>
-                        </button></a></div>
+                        class="w-full underline">
+                        <div class="flex w-full">
+                          <p class="text-neroGrey mr-auto">中心化交易所 AMA</p>
+                          <img class="w-6 ml-6" src="images/pending.svg" alt="Status icon"></div>
+                      </button></div>
                     <div class="flex max-w-xs px-6 py-4 rounded bg-lightGrey">
                       <div class="flex w-full">
                         <p class="text-neroGrey mr-auto">中心化交易所上市</p>
@@ -384,7 +382,7 @@
                     <div class="flex-1 p-4 sm:p-6 bg-lightGrey rounded-lg">
                       <p class="text-orange tokenomics-item-label font-medium">更
                         多信息</p>
-                      <p class="tokenomics-item-info font-medium"><a href="google.com">白
+                      <p class="tokenomics-item-info font-medium"><a href="./ch.html">白
                           皮书</a></p>
                     </div>
                   </div>
