--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
               ecosystem</h1>
             <h3 class="text-2xl mt-6">The ecosystem will be powered by the
               Utility Token LUCKY that will be minted only through GAMING</h3>
-            <div class="mt-4 sm:mt-9"><a target="_blank" href="google.com" rel="noopener noreferrer"><button
+            <div class="mt-4 sm:mt-9"><a target="_blank" href="./index.html" rel="noopener noreferrer"><button
 
                   class="btn-secondary"></button></a></div>
           </div>
@@ -262,7 +262,7 @@
                         style="color: black;">Mid Term</span></h2>
                     <div class="flex max-w-xs px-6 py-4 rounded bg-lightGrey"><a
 
-                        target="_blank" class="w-full" href="https://google.com"
+                        target="_blank" class="w-full" href=""
 
                         rel="noopener noreferrer"><button class="w-full underline">
                           <div class="flex w-full">
@@ -409,7 +409,7 @@
                     <div class="flex-1 p-4 sm:p-6 bg-lightGrey rounded-lg">
                       <p class="text-orange tokenomics-item-label font-medium">More
                         info</p>
-                      <p class="tokenomics-item-info font-medium"><a href="google.com">Whitepaper</a></p>
+                      <p class="tokenomics-item-info font-medium"><a href="./index.html">Whitepaper</a></p>
                     </div>
                   </div>
                 </div>
