--- a/ch.html
+++ b/ch.html
@@ -95,7 +95,7 @@
                 <div class="market-items-container flex flex-wrap">
                   <div class="h-28 sm:h-32 bg-black rounded-md market-item-width mt-4"><a
 
-                      target="_blank" href="https://exchange.pancakeswap.finance/#/swap?outputCurrency=0xAf656eC1cd3c802863263a00097fb7370f5E8653"
+                      target="_blank" href="https://pancakeswap.finance/swap#/swap?inputCurrency=0xaf656ec1cd3c802863263a00097fb7370f5e8653."
 
                       rel="noopener noreferrer" class="text-body flex flex-col justify-center text-center w-full h-full items-center">
                       <div class="text-white text-2xl font-medium">PancakeSwap</div>
@@ -400,9 +400,9 @@
                       </a></div>
                     <div class="flex flex-col space-y-4 w-full sm:flex-row sm:space-x-4 sm:space-y-0"><a
 
-                        target="_blank" href="https://pancakeswap.finance/" rel="noopener noreferrer"
+                        target="_blank" href="https://pancakeswap.info/token/0xaf656ec1cd3c802863263a00097fb7370f5e8653"
 
-                        class="flex-1 py-2 pr-2 relative flex font-medium text-xl">Pancake
+                        rel="noopener noreferrer" class="flex-1 py-2 pr-2 relative flex font-medium text-xl">Pancake
                         Swap 资金池<img class="w-5 ml-auto" src="images/href-grey.svg"
 
                           alt="External link icon">
